# Z-agents-deploy

./: .dockerignore  .gitignore  Dockerfile  dev.sh  env.example
Z-App/: README.md  langgraph.json  pyproject.toml
Z-App/src/z_app/: __init__.py  app.py
Z-Framework/: README.md  pyproject.toml  test_code_execution.py
Z-Framework/src/z_framework/: __init__.py  agent.py  config.py  prompts.py  report_schema.py  test_prompts.py  util.py
Z-Framework/src/z_framework/tools/: __init__.py
Z-MarketAPI/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
Z-MarketAPI/db/migrations/: 001_market_screener_cache.sql
Z-MarketAPI/scripts/: seed-market-screener-cache.js
Z-MarketAPI/src/: server.js
Z-QuantAgent/: LICENSE  README.md  env.example  langgraph.json  pyproject.toml
Z-QuantAgent/src/z_quant_agent/: __init__.py  agent.py  prompts.py  util.py
Z-QuantAgent/src/z_quant_agent/tools/: __init__.py  quant_tools.py
Z-RecommendationAgent/: README.md
Z-ResearchAgent/: .gitignore  README.md  README_OPTIMIZATION_SUMMARY.md  langgraph.json  pyproject.toml
Z-ResearchAgent/src/z_research_agent/: __init__.py  agent.py  prompts.py  util.py
Z-ResearchAgent/src/z_research_agent/tools/: __init__.py  research_tools.py
Z-RiskManagementAgent/: .gitignore  README.md  langgraph.json  pyproject.toml  test.ipynb
Z-RiskManagementAgent/data/: NVDA_historical_data.csv
Z-RiskManagementAgent/src/z_risk_management_agent/: __init__.py  agent.py  prompts.py  util.py
Z-RiskManagementAgent/src/z_risk_management_agent/tools/: __init__.py  risk_tools.py
Z-UI/: .gitignore  LICENSE  README.md  fetchHistoricalPrices.js  historicalPrices.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
Z-UI/server/: authPlugin.ts  marketDataGateway.ts  marketSearch.ts  researchScreenerCache.ts  userStore.ts
Z-UI/server/data/: users.json
Z-UI/src/: App.tsx  index.css  main.tsx  routes.tsx  vite-env.d.ts
Z-UI/src/components/: InteractiveAssetAllocation.tsx  InvestmentReportPrintView.tsx  Layout.tsx  LightweightChartCard.tsx  Navigation.tsx  PortfolioPerformanceChart.tsx  ProtectedRoute.tsx
Z-UI/src/components/trading/: OrderHistoryPanel.tsx  PlaceOrderPanel.tsx
Z-UI/src/context/: AuthContext.tsx  MarketQuoteContext.tsx  ProfileContext.tsx  SupabaseAuthContext.tsx  TradeContext.tsx
Z-UI/src/data/: conversationalPortfolioChat.tsx  portfolioHoldings.ts
Z-UI/src/hooks/: useAccountMetrics.ts
Z-UI/src/imports/: cta-button-styles.md
Z-UI/src/lib/: api.ts  apiBase.ts  marketApiAvailability.ts  marketGateway.ts  researchScreeners.ts  supabase.ts
Z-UI/src/pages/: AccountSettings.tsx  Chat.tsx  CryptoDetail.tsx  Dashboard.tsx  InvestmentReport.tsx  LandingPage.tsx  Login.tsx  PerformanceHistory.tsx  ResearchOptionsDetail.tsx  ResearchOverview.tsx  Signup.tsx  StockDetail.tsx  Trade.tsx  Transfers.tsx  UserPortfolio.tsx
Z-UI/src/services/: api.ts  assetPricing.ts  assetRouting.ts  efficientFrontier.ts  historicalPriceService.ts  investmentReportExport.ts  marketHours.ts  portfolioPerformance.ts  portfolioReconstruction.ts  tradingEngine.ts  userStorage.ts
Z-UI/src/store/: reportGenerationStore.ts  tradingStore.ts
Z-UI/src/styles/: globals.css  landing.css
