[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "z-framework"
version = "0.1.0"
description = "Z-Framework Python library"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Peter" }
]
dependencies = [
  "langgraph>=1.0.7",
  "langchain-openai",
  "langchain-google-genai>=3.1.0",
  "langchain-deepseek",
  "deepagents",
  "langgraph-supervisor",
  "langgraph-swarm",
  "pydantic",
  "langchain-core",
  "langgraph-cli[inmem]>=0.4.12",
  "langchain-google-vertexai",
  "langgraph-api>=0.7.41",
  "google-ai-generativelanguage",
  "numpy",
  "grpcio>=1.76.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/z_framework"]
